Transforming xmlChar* to gchar* and freeing correctly

https://bugzilla.gnome.org/show_bug.cgi?id=784049